--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,19 @@ input[type="checkbox"][data-task="/"] {
 	border-color: var(--checkbox-marker-mid-color);
 }
 input[type="checkbox"][data-task="/"]:after {
-	background-color: var(--checkbox-marker-mid-color);
-	-webkit-mask-image: url('data:image/svg+xml; utf8, <svg width="12px" height="10px" viewBox="0 0 12 8" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g transform="translate(-4.000000, -6.000000)" fill="%23000000"></g></g></svg>');
+	content: "";
+    top: -1px;
+    left: -1px;
+    position: absolute;
+    width: var(--checkbox-size);
+    height: var(--checkbox-size);
+    display: block;
+    -webkit-mask-position: 52% 52%;
+    -webkit-mask-size: 65%;
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8' standalone='no'%3F%3E%3C!-- Created with Inkscape (http://www.inkscape.org/) --%3E%3Csvg width='16' height='16' viewBox='0 0 16 16' version='1.1' id='svg1' inkscape:version='1.3 (0e150ed6c4, 2023-07-21)' sodipodi:docname='half_comlete_icon.svg' xmlns:inkscape='http://www.inkscape.org/namespaces/inkscape' xmlns:sodipodi='http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Csodipodi:namedview id='namedview1' pagecolor='%23ffffff' bordercolor='%23cccccc' borderopacity='1' inkscape:showpageshadow='0' inkscape:pageopacity='1' inkscape:pagecheckerboard='0' inkscape:deskcolor='%23d1d1d1' inkscape:document-units='px' inkscape:zoom='28.57812' inkscape:cx='4.2690002' inkscape:cy='8.2230742' inkscape:window-width='1920' inkscape:window-height='1025' inkscape:window-x='0' inkscape:window-y='16' inkscape:window-maximized='1' inkscape:current-layer='layer1' /%3E%3Cdefs id='defs1' /%3E%3Cg inkscape:label='Layer 1' inkscape:groupmode='layer' id='layer1'%3E%3Cpath fill='%2523000000' fill-rule='evenodd' d='m 13.435907,2.4526743 c 0.396238,0.3881596 0.335195,0.770026 -0.0018,1.092564 L 3.5411811,14.206277 C 3.2844152,14.44286 2.8821905,14.442338 2.6260732,14.205077 L 1.7121455,13.341869 C 1.4593273,13.105097 1.4598568,12.718411 1.7133206,12.483527 L 11.686723,1.8973867 C 11.993199,1.5045075 12.6673,1.5576932 12.894421,1.8861437' id='path1' sodipodi:nodetypes='cccccccc' style='stroke-width:1.24848' /%3E%3C/g%3E%3C/svg%3E");
 }
+
 input[type="checkbox"][data-task="/"]:hover {
 	background-color: var(--checkbox-marker-mid-color-hover);
 	border-color: var(--checkbox-marker-mid-color-hover);
